# OpenLattice

./: .gitattributes  .gitignore  .lattice-state.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  example.lattice  opencode.json  pyproject.toml  whitepaper.md
.agents/: baseline.json  dispatch.md  gates.md
.agents/loops/: bugfix.md  codegen.md  feature.md  refactor.md
.claude/agents/: code-validator.md  generator-verifier.md  state-manager-verifier.md  validation-orchestrator.md
.claude/workflows/: full-validation.js
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
docs/: 404.html  index.html  registry.html  registry.json
docs/superpowers/plans/: 2026-06-23-tf-compliant-dsl-state.md
editors/: neovim.lua
editors/vscode/: extension.js  language-configuration.json  package.json
editors/vscode/syntaxes/: lattice.tmLanguage.json
examples/blog/: blog.lattice
examples/ecommerce/: ecommerce.lattice
examples/ipaas/: README.md  ipaas.lattice
openlattice/: cli.py  ir.py  lsp.py  parser.py  state.py
openlattice/generators/: app_gen.py  connectors_gen.py  events_gen.py  fastapi_gen.py  queue_gen.py  routes_gen.py  schemas_gen.py  sqlalchemy_gen.py  workflow_gen.py
scripts/: build_registry.py
terraform-provider-openlattice/: README.md  go.mod  main.go
terraform-provider-openlattice/internal/provider/: pipeline_resource.go  pipeline_resource_test.go  provider.go
tests/: test_cli.py  test_codegen_golden.py  test_connectors_gen.py  test_ipaas_example.py  test_ir_enriched.py  test_parser.py  test_parser_edge_cases.py  test_state.py  test_workflow_gen.py
tests/golden/: ecommerce_events.py  ecommerce_queues.py  ecommerce_workflows.py  example_main.py  example_models.py  example_routes.py  example_schemas.py
