[project]
name = "openlattice"
version = "0.1.0"
description = "Declarative application specification compiler"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.0",
    "click>=8.0.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
openlattice = "openlattice.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
