[project]
name = "openlattice"
version = "0.1.0"
description = "Declarative application specification compiler — Terraform-style DSL for FastAPI and SQLAlchemy"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sujeet Buddiga", email = "sujeet4work@gmail.com" }]
keywords = ["fastapi", "sqlalchemy", "code-generation", "dsl", "terraform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.0",
    "click>=8.0.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://go2sujeet.github.io/OpenLattice"
Repository = "https://github.com/go2sujeet/OpenLattice"
Issues = "https://github.com/go2sujeet/OpenLattice/issues"

[project.scripts]
openlattice = "openlattice.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
