[project]
name = "openlattice"
version = "0.2.0"
description = "Declarative application specification compiler — Terraform-style DSL for FastAPI and SQLAlchemy"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sujeet Buddiga", email = "sujeet4work@gmail.com" }]
keywords = ["fastapi", "sqlalchemy", "code-generation", "dsl", "terraform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.0",
    "click>=8.0.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://go2sujeet.github.io/OpenLattice"
Repository = "https://github.com/go2sujeet/OpenLattice"
Issues = "https://github.com/go2sujeet/OpenLattice/issues"

[project.optional-dependencies]
lsp = ["pygls>=1.3.0"]

[project.scripts]
openlattice = "openlattice.cli:cli"
openlattice-lsp = "openlattice.lsp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.3.0",
    "basedpyright>=1.12.0",
    "types-click>=7.1.8",
    "types-python-dateutil>=2.9.0.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.basedpyright]
typeCheckingMode = "strict"
# tests/golden: committed generator-output fixtures, not hand-written source.
# lsp.py: pygls (optional LSP dep) exposes broad Unknown types under strict
# mode; typing it properly would mean writing stubs for a third-party library.
exclude = ["tests/golden", "openlattice/lsp.py"]

[tool.mypy]
ignore_missing_imports = true
